--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input {
+  @apply appearance-none border-2 rounded bg-input  w-300 h-46 mb-2.5 border-none py-2 px-4 leading-tight focus:outline-none float-left;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.label {
+  @apply block font-medium float-left  p-1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.select{
+  @apply w-300 h-46 bg-input border-none rounded-lg focus:outline-none appearance-none
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.error{
+  @apply text-red3 w-450 text-xs font-normal float-right mt-08
 }
