--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,20 @@
 .simplebar-content{
   height: 100%;
 } */
+
+/* .css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline,
+.css-1d3z3hw-MuiOutlinedInput-notchedOutline,
+.css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline{
+  border: none !important;
+  outline: none !important;
+} */
+
+/* .css-1yhpg23-MuiTableCell-root {
+  border: 1px solid white !important;
+}
+
+
+
+.css-1ex1afd-MuiTableCell-root {
+  border: 1px solid white !important;
+} */
