--- a/src/components/CustomComponents/Custom.scss
+++ b/src/components/CustomComponents/Custom.scss
@@ -28,20 +28,18 @@
   .react-datepicker__triangle::after {
   border: none;
 }
-.react-datepicker-popper{
+.react-datepicker-popper {
   z-index: 1000;
 }
 
-
 .react-datepicker__month-container {
-  
   width: 351px;
   height: 348px;
   .react-datepicker__header {
     background-color: #fff;
     border-bottom: none;
     height: 108px;
-    .react-datepicker__current-month{
+    .react-datepicker__current-month {
       height: 50px;
     }
     .react-datepicker__day-names {
@@ -192,15 +190,117 @@
 //   margin-right: 20px;
 // }
 
-
-
-.MuiFormControlLabel-label.Mui-disabled{
-  color:#000000 !important;
+.Mui-checked {
+  color: rgb(48, 164, 108) !important;
 }
-
-.Mui-checked{
-  color: rgb(48, 164, 108) !important
-}
-.Mui-disabled{
+.Mui-disabled {
   color: rgba(0, 0, 0, 0.26) !important;
 }
+
+// custom input
+
+.input__custom {
+  .MuiFormControlLabel-label.Mui-disabled {
+    color: #000000 !important;
+    .MuiInputBase-root {
+      height: 3rem;
+    }
+  }
+  .MuiOutlinedInput-root {
+    height: 48px;
+    background-color: rgb(241, 243, 245);
+    border-radius: 6px !important;
+  }
+  .MuiOutlinedInput-notchedOutline {
+    border-color: transparent !important;
+  }
+  }
+
+.Mui-error.MuiInputBase-formControl.MuiOutlinedInput-root {
+  background-color: rgb(255, 239, 239) !important;
+}
+
+.Mui-error.MuiInputBase-root {
+  border: 1px solid rgb(243, 174, 175) !important;
+  background-color: rgb(255, 239, 239) !important;
+}
+
+.input__number {
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
+
+.MuiOutlinedInput-input {
+  height: 13px !important;
+}
+
+.MuiFormHelperText-root {
+  // padding-left: 14px;
+  color: rgb(229, 72, 77) !important;
+}
+
+.custom__modal {
+  .MuiBox-root {
+    border: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400;
+    // bgcolor: background.paper;
+    // border: 2px solid #000;
+    box-shadow: 24px;
+    padding: 4px;
+  }
+}
+
+.MuiDialogTitle-root {
+  padding: 20px 16px 4px 24px !important;
+}
+.MuiDialogContent-root {
+  padding: 0px 24px !important;
+  border: none !important;
+}
+
+
+// dialog__custom
+
+.dialog__custom{
+  button{
+    height: 48px;
+    min-width: 148px;
+    text-transform:none
+  }
+  .no{
+    background-color: rgb(241, 243, 245);
+    color: rgb(17, 24, 28);
+  }
+  .no:hover{
+    background-color: rgba(0, 145, 255, 0.08);
+  }
+  .yes{
+    background-color: rgb(0, 145, 255);
+    color: rgb(251, 253, 255);
+  }
+  .yes:hover{
+    background-color: rgb(0, 129, 241);
+  }
+}
+
+// select
+
+.select__icon{
+  .MuiSelect-select{
+    align-items: center;
+  }
+  .css-1w289tk-MuiPaper-root-MuiMenu-paper-MuiPopover-paper .MuiMenuItem-root{
+    color: var(--background-color);
+
+  }
+}
+// .MuiPopover-paper {
+//   padding: 0 !important;
+// }
