--- a/src/components/CustomComponents/Custom.scss
+++ b/src/components/CustomComponents/Custom.scss
@@ -309,3 +309,10 @@
 // .MuiPopover-paper {
 //   padding: 0 !important;
 // }
+
+.input__custom{
+  .Mui-disabled{
+    background-color: rgb(223, 227, 230);
+    border-radius: 6px;
+  }
+}
